Replenish stats.